--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -271,7 +271,21 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+
     </LinearLayout>
 
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/plus_button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginBottom="30dp"-->
+<!--        android:layout_marginRight="30dp"-->
+<!--        app:backgroundTint="@color/white"-->
+<!--        android:src="@drawable/addbtnsvg"-->
+<!--        app:maxImageSize="65dp"-->
+<!--        android:layout_gravity="bottom|end" />-->
 
 </RelativeLayout>
+
