--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -35,212 +35,99 @@
 
     </LinearLayout>
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/topLinerLayout"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:text="Please tell up about your help"-->
-<!--        android:gravity="center"-->
-<!--        android:fontFamily="@font/poppins_semibold"-->
-<!--        android:textSize="25sp"-->
-<!--        android:textColor="@color/black"/>-->
-
-    <LinearLayout
-        android:id="@+id/secondLinerLayout"
+    <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="50dp"
-        android:layout_below="@id/topLinerLayout">
+        android:layout_below="@id/topLinerLayout"
+        android:layout_marginTop="20dp">
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp">
+            android:padding="20dp"
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_username"
+
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/splash_button"
+                android:padding="20dp"
+                android:hint="Food/Dish Name"
+                android:textColorHint="@color/green"
                 android:drawableLeft="@drawable/food_svg1"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Food / Dish Name"
-                android:paddingTop="30dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp"/>
+                android:drawablePadding="20dp"
+                android:textSize="18dp"
+                android:inputType="text"
+                android:fontFamily="@font/poppins_medium"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/menu_drop"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="Select Your Food Category"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:layout_marginBottom="25dp"-->
-<!--            android:background="@drawable/splash_button"-->
-<!--            android:outlineSpotShadowColor="@color/green"-->
-<!--            app:hintTextColor="@color/green"-->
-<!--            android:textColorHint="@color/green"-->
-<!--            app:boxStrokeColor="@color/green">-->
-
-<!--            <AutoCompleteTextView-->
-<!--                android:id="@+id/drop_items"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_weight="1"-->
-<!--                android:inputType="none"-->
-<!--                android:text="Choose your module"-->
-<!--                />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/menu_drop"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="@string/select"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:layout_marginBottom="25dp"-->
-<!--            android:background="@drawable/splash_button"-->
-<!--            android:outlineSpotShadowColor="@color/green"-->
-<!--            app:hintTextColor="@color/green"-->
-<!--            android:textColorHint="@color/green"-->
-<!--            app:boxStrokeColor="@color/green">-->
-
-<!--            <AutoCompleteTextView-->
-<!--                android:id="@+id/drop_items"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_weight="1"-->
-<!--                android:inputType="none"-->
-<!--                android:text="Choose your module"-->
-<!--                />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Login"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:padding="15dp"-->
-<!--            android:layout_margin="40dp"-->
-<!--            android:textSize="17dp"-->
-<!--            android:fontFamily="@font/poppins_semibold"-->
-<!--            android:backgroundTint="@color/green"/>-->
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/dateTimeLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/secondLinerLayout">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etDatePicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:layout_marginRight="2dp"
-            android:layout_weight="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_datepicker"
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/splash_button"
+                android:padding="20dp"
+                android:hint="Select Expiry Date"
+                android:inputType="date"
+                android:textColorHint="@color/green"
                 android:drawableLeft="@drawable/datesvg"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Select Date"
-                android:paddingTop="30dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:drawablePadding="20dp"
+                android:textSize="18dp"
+                android:fontFamily="@font/poppins_medium"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etTimePicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:layout_marginLeft="2dp"
-            android:layout_weight="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_timepicker"
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/splash_button"
+                android:padding="20dp"
+                android:hint="Select Expiry Time"
+                android:inputType="datetime"
+                android:textColorHint="@color/green"
                 android:drawableLeft="@drawable/timesvg"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Select Time"
-                android:paddingTop="30dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:drawablePadding="20dp"
+                android:textSize="18dp"
+                android:fontFamily="@font/poppins_medium"/>
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/dadsteTimeLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/dateTimeLinearLayout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etLocationOfFood"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:layout_marginRight="2dp"
-            android:layout_weight="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editTextLocationOfFood"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/menu_drop"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/select1"
+                android:padding="20dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/locationsvg"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Select Location for Pickup"
-                android:paddingTop="30dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:outlineSpotShadowColor="@color/green"
+                app:hintTextColor="@color/green"
+                android:textColorHint="@color/green"
+                app:boxStrokeColor="@color/green">
+
+                <AutoCompleteTextView
+                    android:id="@+id/drop_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="none"
+                    android:text="Choose Food Type" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-    </LinearLayout>
+
+
+
+        </LinearLayout>
+
+
+
+
+
+    </ScrollView>
+
 
 
 </RelativeLayout>
