--- a/app/src/main/res/layout/provider_fragment_feedback.xml
+++ b/app/src/main/res/layout/provider_fragment_feedback.xml
@@ -3,76 +3,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".provider.ui.ProviderFeedbackFragment">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_bar"
-        android:layout_alignParentTop="true"
+    <RelativeLayout
+        android:id="@+id/relLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:scrollbarSize="20dp"
-        app:searchHintIcon="@color/black"
-        android:hint="Search Here"
-        android:background="@drawable/search_bar"/>
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/round_corner"
+        android:elevation="10dp"
+        android:paddingStart="15dp">
+
+        <ImageView
+            android:id="@+id/ivSearch"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/magnify" />
+
+        <AutoCompleteTextView
+            android:id="@+id/etSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/ivSearch"
+            android:background="@null"
+            android:hint="Search FeedBack Here"
+            android:imeOptions="actionSearch"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
 
 
     <ScrollView
-        android:layout_below="@id/search_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-    <LinearLayout
-        android:id="@+id/linear_layout_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search_bar"
-        android:layout_marginTop="30dp"
-       android:paddingBottom="20dp"
-        android:paddingTop="10dp"
-        android:orientation="vertical">
+        android:layout_below="@+id/relLayout1">
 
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
+            android:id="@+id/linear_layout_1"
             android:layout_width="match_parent"
-            android:layout_margin="20dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/search_bar"
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="20dp">
 
+            <include layout="@layout/feedback_layout" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:orientation="vertical">
+            <include layout="@layout/feedback_layout" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Yash Sandip Aher"
-                    android:textColor="@color/green"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:textSize="17dp"/>
+            <include layout="@layout/feedback_layout" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available."
-                    android:textSize="14dp"
-                    android:fontFamily="@font/poppins_medium"/>
-
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
+        </LinearLayout>
 
 
     </ScrollView>
-
-
 
 </RelativeLayout>
