--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -6,24 +6,120 @@
     android:layout_height="match_parent"
     tools:context=".provider.ui.ProviderFoodFragment">
 
-
-    <include layout="@layout/layout_for_food_card"
-        android:id="@+id/homeToolbar"
+    <LinearLayout
+        android:id="@+id/topLinerLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addFoodFloatingActionBtn"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="30dp"
-        app:backgroundTint="@color/white"
-        android:src="@drawable/addbtnsvg"
-        app:maxImageSize="58dp"
-        android:layout_gravity="bottom|end" />
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center"
+            android:text="You're one step closer in"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center"
+            android:text="Helping the Needy"
+            android:textColor="@color/green"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/topLinerLayout"
+        android:layout_marginTop="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/splash_button"
+                android:drawableLeft="@drawable/food_svg1"
+                android:drawablePadding="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Food/Dish Name"
+                android:inputType="text"
+                android:padding="20dp"
+                android:textColorHint="@color/green"
+                android:textSize="18dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/splash_button"
+                android:drawableLeft="@drawable/datesvg"
+                android:drawablePadding="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Select Expiry Date"
+                android:inputType="date"
+                android:padding="20dp"
+                android:textColorHint="@color/green"
+                android:textSize="18dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/splash_button"
+                android:drawableLeft="@drawable/timesvg"
+                android:drawablePadding="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Select Expiry Time"
+                android:inputType="datetime"
+                android:padding="20dp"
+                android:textColorHint="@color/green"
+                android:textSize="18dp" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/menu_drop"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/splash_button"
+                android:hint="@string/select1"
+                android:outlineSpotShadowColor="@color/green"
+                android:padding="20dp"
+                android:textColorHint="@color/green"
+                app:boxStrokeColor="@color/green"
+                app:hintTextColor="@color/green">
+
+                <AutoCompleteTextView
+                    android:id="@+id/drop_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="none"
+                    android:text="Choose Food Type" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
 
 </RelativeLayout>
-
