--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".provider.ui.ProviderFoodFragment">
 
+    <include layout="@layout/layout_for_food_card"
+        android:id="@+id/homeToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/plus_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="30dp"
+        app:backgroundTint="@color/white"
+        android:src="@drawable/addbtnsvg"
+        app:maxImageSize="57dp"
+        android:layout_gravity="bottom|end" />
+
 
 
 </RelativeLayout>
