--- a/app/src/main/res/layout/layout_for_food_card.xml
+++ b/app/src/main/res/layout/layout_for_food_card.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:padding="15dp"
             android:background="@drawable/splash_button">
 
             <TextView
