--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -6,120 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".provider.ui.ProviderFoodFragment">
 
-    <LinearLayout
-        android:id="@+id/topLinerLayout"
+    <RelativeLayout
+        android:id="@+id/relLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/round_corner"
+        android:elevation="10dp"
+        android:paddingStart="15dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="center"
-            android:text="You're one step closer in"
+        <ImageView
+            android:id="@+id/ivSearch"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/magnify" />
+
+        <AutoCompleteTextView
+            android:id="@+id/etSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/ivSearch"
+            android:background="@null"
+            android:hint="Search FeedBack Here"
+            android:imeOptions="actionSearch"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="15sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="center"
-            android:text="Helping the Needy"
-            android:textColor="@color/green"
-            android:textSize="20dp" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <ScrollView
-        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/topLinerLayout"
-        android:layout_marginTop="20dp">
+        android:layout_below="@+id/relLayout1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:orientation="vertical">
 
+            <include layout="@layout/layout_for_food_card" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/food_svg1"
-                android:drawablePadding="20dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Food/Dish Name"
-                android:inputType="text"
-                android:padding="20dp"
-                android:textColorHint="@color/green"
-                android:textSize="18dp" />
+            <include layout="@layout/layout_for_food_card" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/datesvg"
-                android:drawablePadding="20dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Select Expiry Date"
-                android:inputType="date"
-                android:padding="20dp"
-                android:textColorHint="@color/green"
-                android:textSize="18dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/timesvg"
-                android:drawablePadding="20dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Select Expiry Time"
-                android:inputType="datetime"
-                android:padding="20dp"
-                android:textColorHint="@color/green"
-                android:textSize="18dp" />
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/menu_drop"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/splash_button"
-                android:hint="@string/select1"
-                android:outlineSpotShadowColor="@color/green"
-                android:padding="20dp"
-                android:textColorHint="@color/green"
-                app:boxStrokeColor="@color/green"
-                app:hintTextColor="@color/green">
-
-                <AutoCompleteTextView
-                    android:id="@+id/drop_items"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:inputType="none"
-                    android:text="Choose Food Type" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+            <include layout="@layout/layout_for_food_card" />
 
 
         </LinearLayout>
 
-
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/plus_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/addbtnsvg"
+        app:backgroundTint="@color/white"
+        app:maxImageSize="57dp"/>
 
 
 </RelativeLayout>
